# rust-image-upload-processor

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md
src/: handlers.rs  jobs.rs  logger.rs  main.rs  workers.rs
