[package]
name = "rust-image-upload-processor"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
multer = "2.0"
futures = "0.3"
bytes = "1"
futures-util = "0.3"
rand = "0.8"
image = "0.25"
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio", "macros"] }
redis = { version = "0.24", features = ["tokio-comp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"